--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NEXT_TELEMETRY_DISABLED=1 next build",
+    "build": "cross-env NEXT_TELEMETRY_DISABLED=1 next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.9.0",
     "next": "15.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@stripe/stripe-js": "^7.9.0",
     "stripe": "^18.5.0"
   },
   "devDependencies": {
@@ -21,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4",
